--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "antd": "^5.13.2",
     "aos": "^2.3.4",
+    "axios": "^1.6.5",
     "bootstrap": "^5.2.0",
     "clsx": "^1.2.1",
     "disqus-react": "^1.1.3",
@@ -20,6 +23,8 @@
     "react-mailchimp-subscribe": "^2.1.3",
     "react-modal-video": "^1.2.10",
     "react-parallax-tilt": "^1.7.62",
+    "react-redux": "^9.1.0",
+    "react-refresh": "^0.14.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-visibility-sensor": "^5.1.1",
