--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exomac",
+  "name": "aumbeeco",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "start": "set PORT=3008 && react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && 'build 5'",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ignore-path .gitignore . --ext js --ext jsx",
